Fixes a layout problem with wide profile pictures of speakers

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -77,7 +77,6 @@ p.item-long-description p,
 
 .item-image img.item-speaker {
     max-height: 250px;
-    width: inherit;
 }
 
 .card .item h2 {
